# tt-iree

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: tt_metal.cmake
compiler/: CMakeLists.txt
compiler/plugins/: CMakeLists.txt
docs/: architecture.md  compiler-backend.md  hal-driver.md  poc-plan.md  tenstorrent-hardware.md
examples/: simple_add.mlir
runtime/: CMakeLists.txt
runtime/src/iree/hal/drivers/tenstorrent/: CMakeLists.txt  api.h  tt_allocator.c  tt_allocator.cc  tt_allocator.h  tt_buffer.c  tt_buffer.cc  tt_buffer.h  tt_device.c  tt_device.cc  tt_device.h  tt_driver.c  tt_driver.cc  tt_driver.h
runtime/src/iree/hal/drivers/tenstorrent/registration/: driver_module.c  driver_module.h
scripts/: build.sh  env_setup.sh  setup_submodules.sh
test/: CMakeLists.txt
test/buffer_roundtrip/: test_buffer_roundtrip.c
test/drivers/tenstorrent/: CMakeLists.txt  buffer_test.cc  device_test.cc  drvier_test.cc  tile_layout_test.cc
tools/: CMakeLists.txt
