# Copyright 2025 The tt-iree Authors
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

#-------------------------------------------------------------------------------
# tt-iree Tests
#-------------------------------------------------------------------------------

add_subdirectory(drivers/tenstorrent)
